--- a/Assert/css/style.css
+++ b/Assert/css/style.css
@@ -161,7 +161,7 @@ img{
 /* ACTIVE MENU */
 .active::after{
     position: absolute;
-    content: '';
+    content: " ";
     width: 100%;
     height: .18rem;
     left: 0;
@@ -208,4 +208,50 @@ img{
     right: 0;
     bottom: 0;
     width: 400px;
+}
+
+/* ABOUT */
+.about_container{
+    justify-items: center;
+    row-gap: 2rem;
+    text-align: center;
+}
+
+.about_img{
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+    width: 120px;
+    height: 120px;
+    background-color: var(--first-color);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.about_img img{
+    width: 100px;
+}
+
+.about_subtitle{
+    font-size: var(--h2-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+
+.about_text{
+    margin-bottom: var(--mb-4);
+}
+
+.about_profession{
+    display: block;
+    margin-bottom: var(--mb-4);
+}
+
+.about_social-icon{
+    font-size: 1.4rem;
+    margin: 0 var(--mb-1);
+}
+
+.about_social-icon:hover{
+    color: var(--first-color);
 }
