--- a/Assert/css/style.css
+++ b/Assert/css/style.css
@@ -255,3 +255,74 @@ img{
 .about_social-icon:hover{
     color: var(--first-color);
 }
+
+/* SKILLS */
+.skills_container{
+    row-gap: 2rem;
+}
+
+.skills_subtitle{
+    color: var(--first-color);
+    margin-bottom: var(--mb-3);
+}
+
+.skills_name{
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-right: var(--mb-2);
+    margin-bottom: var(--mb-2);
+    padding: .25rem .5rem;
+    background-color: var(--white-color);
+    border-radius: .25rem;
+}
+
+.skills_name:hover{
+    background-color: var(--first-color);
+    color: var(--white-color);
+}
+
+.skills_img img{
+    border-radius: .5rem;
+}
+
+/* PORTFOLIO */
+.portfolio{
+    background-color: var(--white-color);
+}
+
+.portfolio_container{
+    justify-items: center;
+    row-gap: 2rem;
+}
+
+.portfolio_img{
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio_img img{
+    border-radius: .5rem;
+}
+
+.portfolio_link{
+    position: absolute;
+    bottom: -100%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255,255,255,.3);
+    border-radius: .5rem;
+    cursor: pointer;
+    backdrop-filter: blur(10px);
+    transition: .3s;
+}
+
+.portfolio_img:hover .portfolio_link{
+    bottom: 0;
+}
+
+.portfolio_link-name{
+    color: var(--dark-color);
+}
