--- a/Assert/css/style.css
+++ b/Assert/css/style.css
@@ -46,6 +46,22 @@ body{
     background-color: var(--background-color);
 }
 
+body::-webkit-scrollbar {
+    width: .8rem;
+    background-color: var(--background-color);
+}
+   
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: var(--background-color);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--dark-color);
+    border-radius: 10px;
+}
+
 @media screen and (min-width: 768px){
     :root{
         --big-font-size: 10.5rem;
